// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standard Header renders standard header properly 1`] = `
.c4 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c4.author {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4.author:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin-right: 10px;
  background-color: #000;
}

.c4.date {
  white-space: nowrap;
  margin: 0 0 0 20px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 1250px;
  width: 100%;
  margin: 40px auto;
  box-sizing: border-box;
}

.c2 {
  font-family: 'Adobe Garamond W08',  'adobe-garamond-pro',  'AGaramondPro-Regular',  'Times New Roman',  'Times',  'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 50px;
  line-height: 1.1em;
  margin-bottom: 50px;
}

.c1 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

@media (max-width: 720px) {
  .c4 {
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 0 20px 0 0;
  }

  .c4.author:before {
    width: 8px;
    height: 8px;
  }
}

@media (max-width: 1250px) {
  .c0 {
    padding: 0 20px;
  }
}

@media (max-width: 600px) {
  .c0 {
    margin: 30px auto;
  }
}

@media (max-width: 600px) {
  .c2 {
    font-family: 'Adobe Garamond W08',  'adobe-garamond-pro',  'AGaramondPro-Regular',  'Times New Roman',  'Times',  'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }
}

@media (max-width: 600px) {
  .c1 {
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Art Market
  </div>
  <div
    className="c2"
  >
    New York's Next Art District
  </div>
  <div
    className="c3"
  >
    <div
      className="author c4"
    >
      By 
      Artsy Editorial
    </div>
    <div
      className="date c4"
    >
      May 19, 2017 9:09 am
    </div>
  </div>
</div>
`;

exports[`Standard Header renders standard header with children properly 1`] = `
.c4 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c4.author {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4.author:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin-right: 10px;
  background-color: #000;
}

.c4.date {
  white-space: nowrap;
  margin: 0 0 0 20px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 1250px;
  width: 100%;
  margin: 40px auto;
  box-sizing: border-box;
}

.c2 {
  font-family: 'Adobe Garamond W08',  'adobe-garamond-pro',  'AGaramondPro-Regular',  'Times New Roman',  'Times',  'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 50px;
  line-height: 1.1em;
  margin-bottom: 50px;
}

.c1 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

@media (max-width: 720px) {
  .c4 {
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 0 20px 0 0;
  }

  .c4.author:before {
    width: 8px;
    height: 8px;
  }
}

@media (max-width: 1250px) {
  .c0 {
    padding: 0 20px;
  }
}

@media (max-width: 600px) {
  .c0 {
    margin: 30px auto;
  }
}

@media (max-width: 600px) {
  .c2 {
    font-family: 'Adobe Garamond W08',  'adobe-garamond-pro',  'AGaramondPro-Regular',  'Times New Roman',  'Times',  'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }
}

@media (max-width: 600px) {
  .c1 {
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Art Market
  </div>
  <div
    className="c2"
  >
    <div>
      Child 1: Title
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="author c4"
    >
      By 
      Artsy Editorial
    </div>
    <div
      className="date c4"
    >
      May 19, 2017 9:09 am
    </div>
  </div>
</div>
`;
